feat: #349 Initialize infrastructure for GraphQL and gRPC. Work on an optimized scneario for GrpcProxyService
Signed-off-by: Laurent Broudoux <laurent.broudoux@gmail.com>